upgraded project web extension

--- a/src/sidepanel/index.html
+++ b/src/sidepanel/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <base target="_blank">
-  <title>Options</title>
+  <title>Sidepanel</title>
 </head>
 
-<body>
+<body style="min-width: 100px">
   <div id="app"></div>
   <script type="module" src="./main.js"></script>
 </body>
