--- a/src/options/index.html
+++ b/src/options/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <base target="_blank">
   <title>Options</title>
+  <link rel="stylesheet" href="../styles/app.css">
 </head>
 
 <body>
