--- a/src/sidepanel/index.html
+++ b/src/sidepanel/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <base target="_blank">
   <title>Sidepanel</title>
+  <link rel="stylesheet" href="../styles/app.css">
 </head>
 
 <body style="min-width: 100px">
