--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="min-width: 100px">
-  <div id="app"></div>
+  <div id="lustre_web_extension"></div>
   <script type="module" src="./main.js"></script>
 </body>
 
